--- a/DOM/DOM_Methods/index.html
+++ b/DOM/DOM_Methods/index.html
@@ -14,6 +14,8 @@
     <div id="container">
       <div class="content">This is the glorious text-content!</div>
     </div>
+
+    <button id="btn">Click me </button>
 </body>
 </html>
 
