--- a/form-validation/index.html
+++ b/form-validation/index.html
@@ -12,22 +12,22 @@
   <div class="container">
     <h1>Sign Up</h1>
     <form class="form" id="signup">
-        <div class="item" class="form-error" class="form-success" >
+        <div class="item" >
             <label for="username">Username</label>
             <input type="text" id="username">
             <small></small>
         </div>
-        <div class="item" class="form-error" class="form-success" >
+        <div class="item" >
             <label for="email">Email</label>
             <input type="text" id="email">
             <small></small>
         </div>
-        <div class="item" class="form-error" class="form-success" >
+        <div class="item" >
             <label for="password">Password</label>
             <input type="password" id="password">
             <small></small>
         </div>
-        <div class="item" class="form-error" class="form-success" >
+        <div class="item" >
             <label for="confirm-password">Confirm Password</label>
             <input type="password" id="confirm-password">
             <small></small>
